--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spellforce-zx-cli",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Personal cli tool",
   "type": "module",
   "main": "index.js",
@@ -25,6 +25,7 @@
     "commander": "^9.3.0",
     "didyoumean": "^1.2.2",
     "fs-extra": "^10.1.0",
+    "inquirer": "^9.0.0",
     "ora": "^6.1.2",
     "semver": "^7.3.7"
   }
